enable galaxy import

--- a/.travis.yml
+++ b/.travis.yml
@@ -72,5 +72,5 @@ script:
   - rm -rf ~/.ssh
   - ansible-playbook tests/test.yml -i tests/inventory
 
-#notifications:
-  #webhooks: https://galaxy.ansible.com/api/v1/notifications/
+notifications:
+  webhooks: https://galaxy.ansible.com/api/v1/notifications/
