support deprecated ansible_ssh_* vars

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -19,10 +19,28 @@
   run_once: True
   delegate_to: localhost
   become: False
-  become_user: "{{ ansible_user | d(lookup('id', 'euname'), True) }}"
+  become_user: >-
+    {{ ansible_version.full
+       | version_compare('2.0', '<')
+       | ternary(hostvars[inventory_hostname].ansible_ssh_user
+                 | d(ansible_ssh_user),
+                 hostvars[inventory_hostname].ansible_ssh_user
+                 | d(hostvars[inventory_hostname].ansible_user)
+                 | d(ansible_ssh_user)
+                 | d(ansible_user))
+       | d(lookup('id', 'euname'), True) }}
   vars:
   - ansible_become: False
-  - ansible_become_user: "{{ ansible_user | d(lookup('id', 'euname'), True) }}"
+  - ansible_become_user: >-
+      {{ ansible_version.full
+         | version_compare('2.0', '<')
+         | ternary(hostvars[inventory_hostname].ansible_ssh_user
+                   | d(ansible_ssh_user),
+                   hostvars[inventory_hostname].ansible_ssh_user
+                   | d(hostvars[inventory_hostname].ansible_user)
+                   | d(ansible_ssh_user)
+                   | d(ansible_user))
+         | d(lookup('id', 'euname'), True) }}
   when:
   - ([ hostvars[inventory_hostname].ansible_connection | d('smart') ]) | intersect(['ssh', 'smart', 'paramiko']) | list | length == 1
   - ( '~/.ssh' | expanduser | exists )
