--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,11 +5,9 @@
       path: "{{ '~' | expanduser | realpath }}"
       follow: True
     register: home_stat
-  - name: debuging
-    debug: msg="{{home_stat}}"
   - name: $HOME should be owned by the invoking user (sudo -H to the other user)
     assert:
-      that: "home_stat.stat.exists == False or home_stat.stat.isuid"
+      that: "home_stat.stat.exists == False or home_stat.stat.uid == lookup('id', 'uid')"
   - name: ~/.ssh/ should be mode 0700
     file:
       path: "{{ '~/.ssh' | expanduser | realpath }}"
