--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -16,9 +16,9 @@
 
   - name: ~/.ssh/config must be mode 0600
     when:
-    - ( '~/.ssh/config' | expanduser | exists )
-    - ( '~/.ssh/config' | expanduser | realpath | exists )
-    - ( '~/.ssh/config' | expanduser | realpath | is_file )
+    - ( '~/.ssh/config' | expanduser is exists )
+    - ( '~/.ssh/config' | expanduser | realpath is exists )
+    - ( '~/.ssh/config' | expanduser | realpath is is_file )
     file:
       path: "{{ '~/.ssh/config' | expanduser | realpath }}"
       owner: "{{ lookup('id', 'euname') }}"
@@ -28,8 +28,7 @@
   delegate_to: localhost
   become: False
   become_user: >-
-    {{ ansible_version.full
-       | version_compare('2.0', '<')
+    {{ (ansible_version.full is version_compare('2.0', '<'))
        | ternary(hostvars[inventory_hostname].ansible_ssh_user
                  | d(ansible_ssh_user),
                  hostvars[inventory_hostname].ansible_ssh_user
@@ -40,8 +39,7 @@
   vars:
   - ansible_become: False
   - ansible_become_user: >-
-      {{ ansible_version.full
-         | version_compare('2.0', '<')
+      {{ (ansible_version.full is version_compare('2.0', '<'))
          | ternary(hostvars[inventory_hostname].ansible_ssh_user
                    | d(ansible_ssh_user),
                    hostvars[inventory_hostname].ansible_ssh_user
@@ -51,6 +49,6 @@
          | d(lookup('id', 'euname'), True) }}
   when:
   - ([ hostvars[inventory_hostname].ansible_connection | d('smart') ]) | intersect(['ssh', 'smart', 'paramiko'])
-  - ( '~/.ssh' | expanduser | exists )
-  - ( '~/.ssh' | expanduser | realpath | exists )
-  - ( '~/.ssh' | expanduser | realpath | is_dir )
+  - ( '~/.ssh' | expanduser is exists )
+  - ( '~/.ssh' | expanduser | realpath is exists )
+  - ( '~/.ssh' | expanduser | realpath is is_dir )
