drop support ansible<2.0

--- a/requirements.yml
+++ b/requirements.yml
@@ -1,3 +1,4 @@
 - src: gzm55.require_implicity_localhost
-- src: gzm55.require_disabe_become
 - src: gzm55.local_id_plugin
+- src: gzm55.require_disabe_become
+  version: "1.0.0"
