--- a/meta/main.yml
+++ b/meta/main.yml
@@ -24,6 +24,7 @@ galaxy_info:
 
 allow_duplicates: yes
 dependencies:
-- { role: gzm55.require_implicity_localhost }
-- { role: gzm55.require_disabe_become }
-- { role: gzm55.local_id_plugin }
+- role: gzm55.require_implicity_localhost
+- role: gzm55.local_id_plugin
+- role: gzm55.require_disabe_become
+  version: "1.0.0"
