--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,13 +1,29 @@
 ---
-- block:
+- name: fix ~/.ssh dir permission
+
+  run_once: True
+  delegate_to: localhost
+  vars:
+  - ansible_become: False
+  - ansible_become_user: "{{ lookup('id', 'uname') }}"
+  when:
+  - ([ hostvars[inventory_hostname].ansible_connection | d('smart') ])
+    | intersect(['ssh', 'smart', 'paramiko', 'persistent'])
+  - '~/.ssh' | expanduser is exists
+  - '~/.ssh' | expanduser | realpath is exists
+  - '~/.ssh' | expanduser | realpath is is_dir
+
+  block:
   - name: stat $HOME
     stat:
       path: "{{ '~' | expanduser | realpath }}"
       follow: True
     register: home_stat
+
   - name: $HOME should be owned by the invoking user (sudo -H to the other user)
     assert:
       that: "not home_stat.stat.exists or home_stat.stat.uid == lookup('id', 'uid')"
+
   - name: ~/.ssh/ should be mode 0700
     file:
       path: "{{ '~/.ssh' | expanduser | realpath }}"
@@ -16,39 +32,10 @@
 
   - name: ~/.ssh/config must be mode 0600
     when:
-    - ( '~/.ssh/config' | expanduser is exists )
-    - ( '~/.ssh/config' | expanduser | realpath is exists )
-    - ( '~/.ssh/config' | expanduser | realpath is is_file )
+    - '~/.ssh/config' | expanduser is exists
+    - '~/.ssh/config' | expanduser | realpath is exists
+    - '~/.ssh/config' | expanduser | realpath is is_file
     file:
       path: "{{ '~/.ssh/config' | expanduser | realpath }}"
       owner: "{{ lookup('id', 'euname') }}"
       mode: 'u=rw,g=,o='
-
-  run_once: True
-  delegate_to: localhost
-  become: False
-  become_user: >-
-    {{ (ansible_version.full is version_compare('2.0', '<'))
-       | ternary(hostvars[inventory_hostname].ansible_ssh_user
-                 | d(ansible_ssh_user),
-                 hostvars[inventory_hostname].ansible_ssh_user
-                 | d(hostvars[inventory_hostname].ansible_user)
-                 | d(ansible_ssh_user)
-                 | d(ansible_user))
-       | d(lookup('id', 'euname'), True) }}
-  vars:
-  - ansible_become: False
-  - ansible_become_user: >-
-      {{ (ansible_version.full is version_compare('2.0', '<'))
-         | ternary(hostvars[inventory_hostname].ansible_ssh_user
-                   | d(ansible_ssh_user),
-                   hostvars[inventory_hostname].ansible_ssh_user
-                   | d(hostvars[inventory_hostname].ansible_user)
-                   | d(ansible_ssh_user)
-                   | d(ansible_user))
-         | d(lookup('id', 'euname'), True) }}
-  when:
-  - ([ hostvars[inventory_hostname].ansible_connection | d('smart') ]) | intersect(['ssh', 'smart', 'paramiko'])
-  - ( '~/.ssh' | expanduser is exists )
-  - ( '~/.ssh' | expanduser | realpath is exists )
-  - ( '~/.ssh' | expanduser | realpath is is_dir )
