--- a/meta/main.yml
+++ b/meta/main.yml
@@ -22,9 +22,11 @@ galaxy_info:
 
   galaxy_tags: [system, network]
 
-allow_duplicates: yes
+allow_duplicates: no
 dependencies:
 - role: gzm55.require_implicity_localhost
+  version: master
 - role: gzm55.local_id_plugin
+  version: master
 - role: gzm55.require_disabe_become
   version: "1.0.0"
