--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,5 +1,6 @@
 ---
-- hosts: testserver
+- name: Test this role
+  hosts: testserver
   gather_facts: False
   roles:
   - role: ansible-local-openssh-client-permission-role
