--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ env:
 jobs:
   test-job:
     name: test the role
-    runs-on: $ubuntu-22.04
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v3
 
